--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -6,22 +6,22 @@ Add styles or override variables from the theme here.
 
 // Theme colors
 
-$rosely0: #27272a;
-$rosely1: #615f5f;
-$rosely2: #85677b;
-$rosely3: #a49e9e;
-$rosely4: #f7caca;
-$rosely5: #f4dede;
-$rosely6: #f4eee8;
-$rosely7: #93a9d1;
-$rosely8: #be9cc1;
-$rosely9: #b0879b;
-$rosely10: #b565a7;
-$rosely11: #d2386c;
-$rosely12: #ec809e;
-$rosely13: #eada4f;
-$rosely14: #64bfa4;
-$rosely15: #919bc9;
+$rosely0: #27272a !default;
+$rosely1: #615f5f !default;
+$rosely2: #85677b !default;
+$rosely3: #a49e9e !default;
+$rosely4: #f7caca !default;
+$rosely5: #f4dede !default;
+$rosely6: #f4eee8 !default;
+$rosely7: #93a9d1 !default;
+$rosely8: #be9cc1 !default;
+$rosely9: #b0879b !default;
+$rosely10: #b565a7 !default;
+$rosely11: #d2386c !default;
+$rosely12: #ec809e !default;
+$rosely13: #eada4f !default;
+$rosely14: #64bfa4 !default;
+$rosely15: #919bc9 !default;
 
 $primary: $rosely10 !default;
 $primary-light: $rosely7 !default;
@@ -58,7 +58,7 @@ $td-sidebar-border-color: $border-color !default;
 // Background colors for the sections on home page etc. It is a paint by number system, starting at 0, where the number is taken from the shortcode's ordinal
 // if not provided by the user.
 // These colors are all part of the theme palette, but the mix is fairly random to create variation. This can be overridden by the project if needed.
-$td-box-colors: $dark, $primary, $secondary, $info, $primary-light, $gray-600, $success, $warning, $dark, $danger, $primary, $secondary, $primary-light, $info !default;
+$td-box-colors: $rosely4, $rosely2, $rosely5, $rosely6, $primary-light, $gray-600, $success, $warning, $dark, $danger, $primary, $secondary, $primary-light, $info !default;
 
 $link-color: $rosely10 !default;
 $link-decoration: none !default;
