New colour system and drawings

--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -8,35 +8,35 @@ Add styles or override variables from the theme here.
 
 $rosely0: #27272a !default;
 $rosely1: #615f5f !default;
-$rosely2: #85677b !default;
-$rosely3: #a49e9e !default;
-$rosely4: #f7caca !default;
-$rosely5: #f4dede !default;
-$rosely6: #f4eee8 !default;
-$rosely7: #93a9d1 !default;
-$rosely8: #be9cc1 !default;
-$rosely9: #b0879b !default;
-$rosely10: #b565a7 !default;
-$rosely11: #d2386c !default;
-$rosely12: #ec809e !default;
-$rosely13: #eada4f !default;
-$rosely14: #64bfa4 !default;
-$rosely15: #919bc9 !default;
+$rosely2: #a49e9e !default;
+$rosely3: #f4eee8 !default;
+$rosely4: #ec809e !default;
+$rosely5: #f7caca !default;
+$rosely6: #f8d7dd !default;
+$rosely7: #f4dede !default;
+$rosely8: #85677b !default;
+$rosely9: #b565a7 !default;
+$roselyA: #be9cc1 !default;
+$roselyB: #d2c4d6 !default;
+$roselyC: #d2386c !default;
+$roselyD: #64bfa4 !default;
+$roselyE: #3cadd4 !default;
+$roselyF: #eada4f !default;
 
-$primary: $rosely10 !default;
-$primary-light: $rosely7 !default;
-$secondary: $rosely15 !default;
-$success: $rosely14 !default;
-$info: $rosely7 !default;
-$warning: $rosely13 !default;
-$danger: $rosely11 !default;
-$white: $rosely6 !default;
-$light: $rosely4 !default;
+$primary: $rosely9 !default;
+$primary-light: $roselyA !default;
+$secondary: $roselyC !default;
+$success: $roselyD !default;
+$info: $roselyE !default;
+$warning: $roselyF !default;
+$danger: $roselyC !default;
+$white: $rosely3 !default;
+$light: $rosely5 !default;
 
 $dark: $rosely2 !default;
-$blue: $rosely15 !default;
-$orange: $rosely12 !default;
-$gray-100: $rosely6 !default;
+$blue: $roselyE !default;
+$orange: $rosely4 !default;
+$gray-100: $rosely3 !default;
 $gray-200: #eee !default;
 $gray-300: #dee2e6 !default;
 $gray-400: #ccc !default;
@@ -47,22 +47,22 @@ $gray-800: #333 !default;
 $gray-900: #222 !default;
 $black: $rosely0 !default;
 
-$code-color: $rosely2 !default;
+$code-color: $rosely8 !default;
 
 // UI element colors
 
-$border-color: $rosely8 !default;
-$td-sidebar-bg-color: $rosely5 !default;
+$border-color: $roselyA !default;
+$td-sidebar-bg-color: $rosely7 !default;
 $td-sidebar-border-color: $border-color !default;
 
 // Background colors for the sections on home page etc. It is a paint by number system, starting at 0, where the number is taken from the shortcode's ordinal
 // if not provided by the user.
 // These colors are all part of the theme palette, but the mix is fairly random to create variation. This can be overridden by the project if needed.
-$td-box-colors: $rosely4, $rosely2, $rosely5, $rosely6, $primary-light, $gray-600, $success, $warning, $dark, $danger, $primary, $secondary, $primary-light, $info !default;
+$td-box-colors: $rosely5, $rosely8, $rosely6, $roselyB, $primary-light, $gray-600, $success, $warning, $dark, $danger, $primary, $secondary, $primary-light, $info !default;
 
-$link-color: $rosely10 !default;
+$link-color: $rosely9 !default;
 $link-decoration: none !default;
-$link-hover-color: $rosely9 !default;
+$link-hover-color: $roselyA !default;
 $link-hover-decoration: none !default;
 
 $font-size-base: 1rem !default;
